--- a/src/components/ThemeSwitcher/theme-switcher.scss
+++ b/src/components/ThemeSwitcher/theme-switcher.scss
@@ -12,7 +12,7 @@ $circleSize: 14px;
 $circlePosition: calc($width / 2 - $circleSize);
 $duration: 2000ms;
 
-.theme-switcher__container {
+.theme-switcher {
     position: fixed;
     right: 20px;
     top: 80px;
@@ -54,29 +54,8 @@ $duration: 2000ms;
         }
     }
 
-
-
-
-
-    & input {
-        cursor: pointer;
-        visibility: visible;
-        opacity: 0;
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        top: 0;
-        left: 0;
-        z-index: 5000;
-    }
-
-
-
-
     
-    & .theme-switcher {
-        width: 100%;
-        height: 100%;
+
 
         & > .content-switcher {
             position: relative;
@@ -210,21 +189,25 @@ $duration: 2000ms;
 
                 @keyframes theme-clouds-#{map-get($cloud, index)} {
                     0% { 
-                        transform: translateX(0); 
+                        transform: translateX(-#{map-get($cloud, width)}); 
                     }
                     100% { 
-                        transform: translateX(calc(-#{map-get($cloud, width)} - #{map-get($cloud, gap)})) rotate(0.01deg);
+                        transform: translateX(calc(-2 * #{map-get($cloud, width)} - #{map-get($cloud, gap)})) rotate(0.01deg);
                     }
                 }
             }
 
         }
  
-    }
+    
 
 
     &:focus {
         right: 20px !important;
+
+        @include respond-to(sm) {
+            right: initial !important;
+        }
     }
 
 
