--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -32,7 +32,7 @@ $nav_mobile_delay: 0.3s;
 
 
 
-$color_input_error: #ffa0a0;
+$color_input_error: rgb(238, 167, 167);//#ffa0a0;
 
 $item_delete: red;
 
@@ -105,7 +105,7 @@ body {
     --main_RGB: 7, 113, 184;
     --main_em: #64b5f5;    
     --main_em_RGB: 100, 181, 245;
-    --text: rgb(233, 233, 233);
+    --text: #f2f2f2;
     --text_reverse: #1F2833;
     
     --lang-selector: #EBEBEB;
